Finish header section

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анатолий Гришин &ndash; backend-разработчик</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -18,7 +19,20 @@
         </ul>
     </nav>
     <div class="container">
-        <section id="header"></section>
+        <section id="header">
+            <div class="header-content">
+                <h2>Здравствуйте! Меня зовут</h2>
+                <h1>Анатолий Гришин</h1>
+                <p>Я начинающий backend-разработчик. Я постоянно совершенствую свои знания, проходя различные курсы и выполняя проекты. В своей работе уделяю внимание аккуратности, точности и эффективности кода.</p>
+                <div class="btn-wrapper">
+                    <button class="btn btn-primary">Обо мне <img src="img/profile-icon.svg" alt=""></button>
+                    <button class="btn btn-secondary">Проекты <img src="img/eye-icon.svg" alt=""></button>
+                </div>
+            </div>
+            <div class="header-img">
+                <img src="img/hero-img.svg" alt="Программист">
+            </div>
+        </section>
     </div>
 </body>
 </html>
