--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Navigation Section -->
     <nav>
         <div class="nav-logo">
             <img src="./img/Logo.svg" alt="Логотип">
         </div>
-        <ul class="navlist">
+        <ul class="navlinks">
             <li><a href="#">Главная</a></li>
             <li><a href="#">Инструменты</a></li>
             <li><a href="#">Проекты</a></li>
@@ -19,6 +20,8 @@
         </ul>
     </nav>
     <div class="container">
+
+        <!-- Header Section -->
         <section id="header">
             <div class="header-content">
                 <h2>Здравствуйте! Меня зовут</h2>
