Add About Me Section html structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анатолий Гришин &ndash; backend-разработчик</title>
+    <title>Анатолий Гришин</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,10 +32,44 @@
                     <button class="btn btn-secondary">Проекты <img src="img/eye-icon.svg" alt=""></button>
                 </div>
             </div>
+            <!-- /.header-content -->
             <div class="header-img">
                 <img src="img/hero-img.svg" alt="Программист">
             </div>
         </section>
+        <!-- /#header -->
+
+        <!-- About Me Section -->
+        <section id="about-me">
+            <h1 class="title">Обо мне</h1>
+            <p>Здравствуйте! Меня зовут Анатолий Гришин. Я начинающий PHP-разработчик. Постоянное развитие и внимание к мелочам - мои основные принципы работы. Всегда ищу красивые и эффективные решения, способен быстро изучить новые технологии.</p>
+            <div class="experience">
+                <h1 class="experience-title">5+</h1>
+                <p>онлайн-курсов в области веб-программирования. Знание различных технологий помогают мне создавать привлекательные и эффективные сайты.</p>
+            </div>
+            <!-- /.experience-->
+            <div class="skills">
+                <div class="skill skill-1">
+                    <img src="img/ux.svg" alt="HTML">
+                    <h1>HTML</h1>
+                </div>
+                <div class="skill skill-2">
+                    <img src="img/python.svg" alt="CSS">
+                    <h1>CSS</h1>
+                </div>
+                <div class="skill skill-3">
+                    <img src="img/javascript.svg" alt="JavaScript">
+                    <h1>JavaScript</h1>
+                </div>
+                <div class="skill skill-4">
+                    <img src="img/web-scrapping.svg" alt="PHP">
+                    <h1>PHP</h1>
+                </div>
+            </div>
+            <!-- /.skills -->
+        </section>
+        <!-- /#about-me -->
     </div>
+    <!-- /.container -->
 </body>
 </html>
