Add styles to About Me Section

--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
 
         <!-- About Me Section -->
         <section id="about-me">
-            <h1 class="title">Обо мне</h1>
+            <h1>Обо мне</h1>
             <p>Здравствуйте! Меня зовут Анатолий Гришин. Я начинающий PHP-разработчик. Постоянное развитие и внимание к мелочам - мои основные принципы работы. Всегда ищу красивые и эффективные решения, способен быстро изучить новые технологии.</p>
             <div class="experience">
-                <h1 class="experience-title">5+</h1>
+                <h1>5+</h1>
                 <p>онлайн-курсов в области веб-программирования. Знание различных технологий помогают мне создавать привлекательные и эффективные сайты.</p>
             </div>
             <!-- /.experience-->
             <div class="skills">
                 <div class="skill skill-1">
-                    <img src="img/ux.svg" alt="HTML">
+                    <img src="img/html-5.svg" alt="HTML">
                     <h1>HTML</h1>
                 </div>
                 <div class="skill skill-2">
-                    <img src="img/python.svg" alt="CSS">
+                    <img src="img/css-3.svg" alt="CSS">
                     <h1>CSS</h1>
                 </div>
                 <div class="skill skill-3">
-                    <img src="img/javascript.svg" alt="JavaScript">
+                    <img src="img/javascript-24-1.svg" alt="JavaScript">
                     <h1>JavaScript</h1>
                 </div>
                 <div class="skill skill-4">
-                    <img src="img/web-scrapping.svg" alt="PHP">
+                    <img src="img/php-8-1.svg" alt="PHP">
                     <h1>PHP</h1>
                 </div>
             </div>
