--- a/index.html
+++ b/index.html
@@ -69,6 +69,45 @@
             <!-- /.skills -->
         </section>
         <!-- /#about-me -->
+
+        <!-- Services Section -->
+        <section id="services">
+            <h1>Мои курсы:</h1>
+            <div class="services-container">
+                <div class="service">
+                    <img src="img/ux.svg" alt="">
+                    <h2>HTML5</h2>
+                    <p>Изучение основ HTML</p>
+                </div>
+                <div class="service">
+                    <img src="img/web.svg" alt="">
+                    <h2>Advanced HTML and CSS</h2>
+                    <p>Создание привлекательный сайтов при помощи стилей</p>
+                </div>
+                <div class="service">
+                    <img src="img/mobile.svg" alt="">
+                    <h2>JavaScript Essentials</h2>
+                    <p>Основные функции языка JavaScript</p>
+                </div>
+                <div class="service">
+                    <img src="img/git.svg" alt="">
+                    <h2>Get started with Git and Github</h2>
+                    <p>Навыки работы с системой контроля версий Git</p>
+                </div>
+                <div class="service">
+                    <img src="img/node.svg" alt="">
+                    <h2>Linux and Bash Scripts</h2>
+                    <p>Основные команды в операционной системе Linux</p>
+                </div>
+                <div class="service">
+                    <img src="img/web-scrapping.svg" alt="">
+                    <h2>PHP for Beginners</h2>
+                    <p>Начальные знания в PHP</p>
+                </div>
+            </div>
+            <!-- /.services-container -->
+        </section>
+        <!-- /#services -->
     </div>
     <!-- /.container -->
 </body>
