Create styles for Service Section

--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
 
         <!-- Services Section -->
         <section id="services">
-            <h1>Мои курсы:</h1>
+            <h1>Мои курсы</h1>
             <div class="services-container">
                 <div class="service">
-                    <img src="img/ux.svg" alt="">
+                    <img src="img/html-5.svg" alt="">
                     <h2>HTML5</h2>
                     <p>Изучение основ HTML</p>
                 </div>
                 <div class="service">
-                    <img src="img/web.svg" alt="">
+                    <img src="img/css-3.svg" alt="">
                     <h2>Advanced HTML and CSS</h2>
                     <p>Создание привлекательный сайтов при помощи стилей</p>
                 </div>
                 <div class="service">
-                    <img src="img/mobile.svg" alt="">
+                    <img src="img/javascript-24-1.svg" alt="">
                     <h2>JavaScript Essentials</h2>
                     <p>Основные функции языка JavaScript</p>
                 </div>
@@ -100,7 +100,7 @@
                     <p>Основные команды в операционной системе Linux</p>
                 </div>
                 <div class="service">
-                    <img src="img/web-scrapping.svg" alt="">
+                    <img src="img/php-8-1.svg" alt="">
                     <h2>PHP for Beginners</h2>
                     <p>Начальные знания в PHP</p>
                 </div>
