Create styles for Project Section

--- a/index.html
+++ b/index.html
@@ -112,32 +112,38 @@
         <!-- Projects Section -->
         <section id="projects">
             <h1>Мои проекты</h1>
-            <p>В моих проектах воплощены самые разные идеи.</p>
+            <p>В моих проектах воплощены самые разные идеи</p>
             <div class="projects-container">
                 <div class="project">
-                    <img src="img/project-1.svg" alt="">
-                    <h2>Store</h2>
-                    <p>Сайтмагазина одежды</p>
+                    <div class="project-content">
+                        <img src="img/project-1.svg" alt="">
+                        <h2>Store</h2>
+                        <p>Сайт магазина одежды</p>
+                    </div>
                     <div class="btn-wrapper">
-                        <button class="btn btn-primary">Посмотреть сайт</button>
+                        <button class="btn btn-primary">Сайт</button>
                         <button class="btn btn-secondary">Github</button>
                     </div>
                 </div>
                 <div class="project">
-                    <img src="img/project-2.svg" alt="">
-                    <h2>Сайт-портфолио</h2>
-                    <p>Сайт-портфолио Web-разработчика</p>
+                    <div class="project-content">
+                        <img src="img/project-2.svg" alt="">
+                        <h2>Сайт-портфолио</h2>
+                        <p>Сайт-портфолио Web-разработчика</p>
+                    </div>
                     <div class="btn-wrapper">
-                        <button class="btn btn-primary">Посмотреть сайт</button>
+                        <button class="btn btn-primary">Сайт</button>
                         <button class="btn btn-secondary">Github</button>
                     </div>
                 </div>
                 <div class="project">
-                    <img src="img/project-3.svg" alt="">
-                    <h2>Блог о путешествиях</h2>
-                    <p>Блог с различными функциями и разделом администратора</p>
+                    <div class="project-content">
+                        <img src="img/project-3.svg" alt="">
+                        <h2>Блог о путешествиях</h2>
+                        <p>Блог с различными функциями и разделом администратора</p>
+                    </div>
                     <div class="btn-wrapper">
-                        <button class="btn btn-primary">Посмотреть сайт</button>
+                        <button class="btn btn-primary">Сайт</button>
                         <button class="btn btn-secondary">Github</button>
                     </div>
                 </div>
