Add html structure of Contacts Section

--- a/index.html
+++ b/index.html
@@ -151,6 +151,28 @@
             <!-- /.projects-container -->
         </section>
         <!-- /#projects -->
+
+        <!-- Contacts Section -->
+        <section id="contacts">
+            <h1>Способы связи</h1>
+            <div class="contacts-container">
+                <div class="social-links">
+                    <p>Есть вопросы? Или заинтересовали мои проекты? Свяжитесь со мной любым удобным способом!</p>
+                    <div class="icons-wrapper">
+                        <img src="img/facebook.svg" alt="Facebook">
+                        <img src="img/dribble.svg" alt="Dribble">
+                        <img src="img/instagram.svg" alt="Instagram">
+                        <img src="img/e-mail.svg" alt="E-mail">
+                    </div>
+                </div>
+                <div class="form-wrapper">
+                    <h3>Ваши замечания и предложения</h3>
+                    <input type="text" placeholder="ИМЯ :">
+                    <input type="text" placeholder="EMAIL :">
+                    <textarea rows="10" placeholder="ТЕКСТ :"></textarea>
+                </div>
+            </div>
+        </section>
     </div>
     <!-- /.container -->
 </body>
