Add styles to Contacts Section

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
                     <input type="text" placeholder="ИМЯ :">
                     <input type="text" placeholder="EMAIL :">
                     <textarea rows="10" placeholder="ТЕКСТ :"></textarea>
+                    <button class="btn btn-primary">Отправить</button>
                 </div>
             </div>
         </section>
