Add html structure to Footer Section

--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                         <img src="img/e-mail.svg" alt="E-mail">
                     </div>
                 </div>
+                <!-- /.social-links -->
                 <div class="form-wrapper">
                     <h3>Ваши замечания и предложения</h3>
                     <input type="text" placeholder="ИМЯ :">
@@ -172,8 +173,27 @@
                     <textarea rows="10" placeholder="ТЕКСТ :"></textarea>
                     <button class="btn btn-primary">Отправить</button>
                 </div>
+                <!-- /.form-wrapper -->
             </div>
         </section>
+        <!-- #contacts -->
+
+        <!-- Footer -->
+        <section id="footer">
+            <div class="footer-content">
+                <p>&copy; 2024, Pro Programmer</p>
+                <p>Backend-разработчик</p>
+                <p>Отзывчивый дизайн</p>
+                <p>Разработано: Анатолий Гришин</p>
+            </div>
+            <div class="icons-wrapper">
+                <img src="img/facebook.svg" alt="Facebook">
+                <img src="img/dribble.svg" alt="Dribble">
+                <img src="img/instagram.svg" alt="Instagram">
+                <img src="img/e-mail.svg" alt="E-mail">
+            </div>
+        </section>
+        <!-- #footer -->
     </div>
     <!-- /.container -->
 </body>
