Add styles to Footer Section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- Footer -->
         <section id="footer">
             <div class="footer-content">
-                <p>&copy; 2024, Pro Programmer</p>
+                <p>&copy; 2024 Pro Programmer</p>
                 <p>Backend-разработчик</p>
                 <p>Отзывчивый дизайн</p>
                 <p>Разработано: Анатолий Гришин</p>
