Add header styles for mobile devices

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#">Проекты</a></li>
             <li><a href="#">Контакты</a></li>
         </ul>
+        <img src="img/menu.svg" alt="Меню" class="menu-btn">
     </nav>
     <div class="container">
 
