Add contacts section styles for mobile devices

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <!-- #contacts -->
 
         <!-- Footer -->
-        <section id="footer">
+        <footer>
             <div class="footer-content">
                 <p>&copy; 2024 Pro Programmer</p>
                 <p>Backend-разработчик</p>
@@ -193,8 +193,7 @@
                 <img src="img/instagram.svg" alt="Instagram">
                 <img src="img/e-mail.svg" alt="E-mail">
             </div>
-        </section>
-        <!-- #footer -->
+        </footer>
     </div>
     <!-- /.container -->
 </body>
