Add Open Graph Protocol for preview

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Анатолий Гришин</title>
+
+    <!-- Open Graph Protocol -->
+    <meta property="og:title" content="Анатолий Гришин">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://trolleyfun.github.io">
+    <meta property="og:image" content="https://trolleyfun.github.io/PortfolioWebSite/img/hero-img.svg">
+    <meta property="og:description" content="Сайт-портфолио">
+    <meta property="og:locale" content="ru">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -197,6 +207,7 @@
     </div>
     <!-- /.container -->
 
+    <!-- Scripts -->
     <script>
         const menuBtn = document.querySelector('.menu-btn');
         const navLinks = document.querySelector('.navlinks');
