Modify Header and Skills sections

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
             <div class="header-content">
                 <h2>Здравствуйте! Меня зовут</h2>
                 <h1>Анатолий Гришин</h1>
-                <p>Я начинающий backend-разработчик. Я постоянно совершенствую свои знания, проходя различные курсы и выполняя проекты. В своей работе уделяю внимание аккуратности, точности и эффективности кода.</p>
+                <h3>Мне 28 лет</h3>
+                <p>Я начинающий PHP-разработчик. В настоящее время ищу работу, где смог бы применить на практике свои знания и вырасти до граммотного специалиста.</p>
                 <div class="btn-wrapper">
-                    <button class="btn btn-primary">Обо мне <img src="img/profile-icon.svg" alt=""></button>
-                    <button class="btn btn-secondary">Проекты <img src="img/eye-icon.svg" alt=""></button>
+                    <a href="#projects" class="btn btn-primary">Проекты <img src="img/eye-icon.svg" alt=""></a>
+                    <a href="https://github.com/trolleyfun" class="btn btn-secondary">Github <img src="img/profile-icon.svg" alt=""></a>
                 </div>
             </div>
             <!-- /.header-content -->
@@ -50,40 +51,52 @@
         </section>
         <!-- /#header -->
 
-        <!-- About Me Section -->
-        <section id="about-me">
-            <h1>Обо мне</h1>
+        <!-- Skills Section -->
+        <section id="skills">
+            <h1>Мои навыки</h1>
+            <div class="skills-container">
+                <div class="skill skill-1">
+                    <img src="img/html-5.svg" alt="">
+                    <h1>HTML</h1>
+                </div>
+                <div class="skill skill-2">
+                    <img src="img/css-3.svg" alt="">
+                    <h1>CSS</h1>
+                </div>
+                <div class="skill skill-3">
+                    <img src="img/javascript-24.svg" alt="">
+                    <h1>JavaScript</h1>
+                </div>
+                <div class="skill skill-4">
+                    <img src="img/php-8.svg" alt="">
+                    <h1>PHP</h1>
+                </div>
+                <div class="skill skill-5">
+                    <img src="img/sql.svg" alt="">
+                    <h1>SQL</h1>
+                </div>
+                <div class="skill skill-6">
+                    <img src="img/git-2.svg" alt="">
+                    <h1>Git</h1>
+                </div>
+                <div class="skill skill-7">
+                    <img src="img/ubuntu.svg" alt="">
+                    <h1>Linux</h1>
+                </div>
+            </div>
+            <!-- /.skills-container -->
+        </section>
+        <!-- /#skills -->
+
+        <!-- Services Section -->
+        <section id="services">
+            <h1>Мои курсы</h1>
             <p>Здравствуйте! Меня зовут Анатолий Гришин. Я начинающий PHP-разработчик. Постоянное развитие и внимание к мелочам - мои основные принципы работы. Всегда ищу красивые и эффективные решения, способен быстро изучить новые технологии.</p>
             <div class="experience">
                 <h1>5+</h1>
                 <p>онлайн-курсов в области веб-программирования. Знание различных технологий помогают мне создавать привлекательные и эффективные сайты.</p>
             </div>
             <!-- /.experience-->
-            <div class="skills">
-                <div class="skill skill-1">
-                    <img src="img/html-5.svg" alt="HTML">
-                    <h1>HTML</h1>
-                </div>
-                <div class="skill skill-2">
-                    <img src="img/css-3.svg" alt="CSS">
-                    <h1>CSS</h1>
-                </div>
-                <div class="skill skill-3">
-                    <img src="img/javascript-24-1.svg" alt="JavaScript">
-                    <h1>JavaScript</h1>
-                </div>
-                <div class="skill skill-4">
-                    <img src="img/php-8-1.svg" alt="PHP">
-                    <h1>PHP</h1>
-                </div>
-            </div>
-            <!-- /.skills -->
-        </section>
-        <!-- /#about-me -->
-
-        <!-- Services Section -->
-        <section id="services">
-            <h1>Мои курсы</h1>
             <div class="services-container">
                 <div class="service">
                     <img src="img/html-5.svg" alt="">
