Modify Education section

--- a/index.html
+++ b/index.html
@@ -57,81 +57,124 @@
             <div class="skills-container">
                 <div class="skill skill-1">
                     <img src="img/html-5.svg" alt="">
-                    <h1>HTML</h1>
+                    <h2>HTML</h2>
                 </div>
                 <div class="skill skill-2">
                     <img src="img/css-3.svg" alt="">
-                    <h1>CSS</h1>
+                    <h2>CSS</h2>
                 </div>
                 <div class="skill skill-3">
                     <img src="img/javascript-24.svg" alt="">
-                    <h1>JavaScript</h1>
+                    <h2>JavaScript</h2>
                 </div>
                 <div class="skill skill-4">
                     <img src="img/php-8.svg" alt="">
-                    <h1>PHP</h1>
+                    <h2>PHP</h2>
                 </div>
                 <div class="skill skill-5">
                     <img src="img/sql.svg" alt="">
-                    <h1>SQL</h1>
+                    <h2>SQL</h2>
                 </div>
                 <div class="skill skill-6">
                     <img src="img/git-2.svg" alt="">
-                    <h1>Git</h1>
+                    <h2>Git</h2>
                 </div>
                 <div class="skill skill-7">
                     <img src="img/ubuntu.svg" alt="">
-                    <h1>Linux</h1>
+                    <h2>Linux</h2>
                 </div>
             </div>
             <!-- /.skills-container -->
         </section>
         <!-- /#skills -->
 
-        <!-- Services Section -->
-        <section id="services">
-            <h1>Мои курсы</h1>
-            <p>Здравствуйте! Меня зовут Анатолий Гришин. Я начинающий PHP-разработчик. Постоянное развитие и внимание к мелочам - мои основные принципы работы. Всегда ищу красивые и эффективные решения, способен быстро изучить новые технологии.</p>
-            <div class="experience">
+        <!-- Education Section -->
+        <section id="education">
+            <h1>Образование</h1>
+            <div class="university">
+                <h1>
+                    Московский физико-технический институт 
+                    
+                </h1>
+                <p>Направление: Прикладная математика и физика, 2020 год</p>
+               
+            </div>
+            <!-- /.university -->
+            <div class="courses-title">
                 <h1>5+</h1>
-                <p>онлайн-курсов в области веб-программирования. Знание различных технологий помогают мне создавать привлекательные и эффективные сайты.</p>
+                <p>онлайн-курсов на образовательных платформах <a href="https://coursera.org">coursera.org</a> и <a href="https://udemy.com">udemy.com</a></p>
             </div>
-            <!-- /.experience-->
-            <div class="services-container">
-                <div class="service">
-                    <img src="img/html-5.svg" alt="">
-                    <h2>HTML5</h2>
-                    <p>Изучение основ HTML</p>
-                </div>
-                <div class="service">
-                    <img src="img/css-3.svg" alt="">
-                    <h2>Advanced HTML and CSS</h2>
-                    <p>Создание привлекательный сайтов при помощи стилей</p>
-                </div>
-                <div class="service">
-                    <img src="img/javascript-24-1.svg" alt="">
-                    <h2>JavaScript Essentials</h2>
-                    <p>Основные функции языка JavaScript</p>
-                </div>
-                <div class="service">
-                    <img src="img/git.svg" alt="">
-                    <h2>Get started with Git and Github</h2>
-                    <p>Навыки работы с системой контроля версий Git</p>
-                </div>
-                <div class="service">
-                    <img src="img/node.svg" alt="">
-                    <h2>Linux and Bash Scripts</h2>
-                    <p>Основные команды в операционной системе Linux</p>
-                </div>
-                <div class="service">
-                    <img src="img/php-8-1.svg" alt="">
+            <!-- /.courses-title -->
+            <div class="courses-container">
+                <div class="course">
+                    <img src="img/php-8.svg" alt="">
                     <h2>PHP for Beginners</h2>
-                    <p>Начальные знания в PHP</p>
+                    <p>в процессе изучения</p>
+                </div>
+                <div class="course">
+                    <img src="img/css-3.svg" alt="">
+                    <h2>HTML and CSS in Depth</h2>
+                    <p>июнь 2024</p>
+                    <div class="certificate">
+                        <a href="docs/HtmlAndCssInDepth.pdf">Сертификат</a>
+                        <img src="img/download-primary.svg" alt="" class="download download-primary">
+                        <img src="img/download-white.svg" alt="" class="download download-white">
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/javascript-24.svg" alt="">
+                    <h2>JavaScript Programming Essentials</h2>
+                    <p>июнь 2024</p>
+                    <div class="certificate">
+                        <a href="docs/JavaScriptProgrammingEssentials.pdf" target="_blank">Сертификат</a>
+                        <img src="img/download-primary.svg" alt="" class="download download-primary">
+                        <img src="img/download-white.svg" alt="" class="download download-white">
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/ubuntu.svg" alt="">
+                    <h2>Introduction to Linux Commands and Shell Scripting</h2>
+                    <p>июнь 2024</p>
+                    <div class="certificate">
+                        <a href="docs/HandsOnIntroductionToLinuxCommandsAndShellScripting.pdf" download>Сертификат</a>
+                        <img src="img/download-primary.svg" alt="" class="download download-primary">
+                        <img src="img/download-white.svg" alt="" class="download download-white">
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/git-2.svg" alt="">
+                    <h2>Getting Started with Git and GitHub</h2>
+                    <p>май 2024</p>
+                    <div class="certificate">
+                        <a href="docs/GettingStartedWithGitAndGithub.pdf" download="11.pdf">Сертификат</a>
+                        <img src="img/download-primary.svg" alt="" class="download download-primary">
+                        <img src="img/download-white.svg" alt="" class="download download-white">
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/html-5.svg" alt="">
+                    <h2>Introduction to HTML5</h2>
+                    <p>май 2024</p>
+                    <div class="certificate">
+                        <a href="docs/IntroductionToHtml5.pdf">Сертификат</a>
+                        <img src="img/download-primary.svg" alt="" class="download download-primary">
+                        <img src="img/download-white.svg" alt="" class="download download-white">
+                    </div>
+                </div>
+                <div class="course">
+                    <img src="img/python-2.svg" alt="">
+                    <h2>Programming in Python</h2>
+                    <p>май 2024</p>
+                    <div class="certificate">
+                        <a href="docs/ProgrammingInPython.pdf">Сертификат</a>
+                        <img src="img/download-primary.svg" alt="" class="download download-primary">
+                        <img src="img/download-white.svg" alt="" class="download download-white">
+                    </div>
                 </div>
             </div>
-            <!-- /.services-container -->
+            <!-- /.courses-container -->
         </section>
-        <!-- /#services -->
+        <!-- /#education -->
 
         <!-- Projects Section -->
         <section id="projects">
