Change preview icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Анатолий Гришин">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://trolleyfun.github.io">
-    <meta property="og:image" content="https://trolleyfun.github.io/PortfolioWebSite/img/hero-img.svg">
+    <meta property="og:image" content="https://trolleyfun.github.io/PortfolioWebSite/img/preview-icon.png">
     <meta property="og:description" content="Сайт-портфолио">
     <meta property="og:locale" content="ru">
 
